Job Offers with view of details of offer without opening it. Textarea on create for readability  Job Applications Details: fixes

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,26 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.float-left{
+    width:30%;
+    float: left;
+}
+
+.float-right{
+    width: 70%;
+    float: right
+}
+
+.float-clear{
+    clear: both;
+}
+
+input textarea{
+    height: 150px;
+}
+
+#container{
+    width:1500px;
+}
+
